cmake_minimum_required(VERSION 3.10)
project(projectC++)
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(ClassesAndpointers)
add_subdirectory(FileHandling)
add_subdirectory(FunctionTemplate)
add_subdirectory(functor1)
add_subdirectory(maps)
#add_subdirectory(PardisoTest)
add_subdirectory(PlantillaDeClase)
add_subdirectory(pointers3)
add_subdirectory(PrintTableInFile)
add_subdirectory(seekg)
add_subdirectory(TemplateStack)
add_subdirectory(ThisPointer1)
add_subdirectory(DynamicCast)
add_subdirectory(DynamicCast2)
add_subdirectory(tempSpecia1)
